--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "tailwindcss": "^3.3.0",
         "typescript": "^5",
         "vite": "^4.5.2",
+        "vite-tsconfig-paths": "^4.3.1",
         "vitest": "^1.2.2"
     }
 }
