--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "secretlint": "secretlint --maskSecrets --secretlintignore .gitignore '**/*'",
         "prepare": "husky",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
+        "build-storybook": "storybook build --docs",
         "test": "vitest"
     },
     "dependencies": {
