--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-regular-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@vercel/speed-insights": "^1.0.9",
+        "framer-motion": "^11.0.3",
         "next": "14.1.0",
+        "next-themes": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
         "react-markdown": "^9.0.1",
@@ -28,7 +34,7 @@
         "@storybook/addon-essentials": "^7.6.11",
         "@storybook/addon-interactions": "^7.6.11",
         "@storybook/addon-links": "^7.6.11",
-        "@storybook/addon-onboarding": "^1.0.11",
+        "@storybook/addon-themes": "^7.6.13",
         "@storybook/blocks": "^7.6.11",
         "@storybook/builder-vite": "^7.6.11",
         "@storybook/react": "^7.6.11",
