--- a/package.json
+++ b/package.json
@@ -68,5 +68,10 @@
         "vite": "^4.5.2",
         "vite-tsconfig-paths": "^4.3.1",
         "vitest": "^1.2.2"
+    },
+    "msw": {
+        "workerDirectory": [
+            "public"
+        ]
     }
 }
